--- a/templates/header.template
+++ b/templates/header.template
@@ -4,7 +4,8 @@
 <title>Xyche Software - svntrac - %(title)s</title>
 <link rel="stylesheet" type="text/css" href="%(htdocs_location)ssvntrac.css">
 </head>
-<body>
+<body marginheight="0" marginwidth="0" rightmargin="0" leftmargin="0" 
+topmargin="0" bottommargin="0" link="#aa0000" alink="#cc0000" vlink="#880000">
     <div id="page-header">
       <table bgcolor="#990000" id="page-topbar" border="0" 
 	cellspacing="0" cellpadding="0" width="100%%">
@@ -28,3 +29,5 @@
 	  </tr>
       </table>
     </div>
+%(toolbar)s
+<div id="page-content">
