--- a/templates/browser.template
+++ b/templates/browser.template
@@ -11,7 +11,7 @@ Change revision: <input type="text" name="rev" value="%(revision)d" size="6">
 <br>
 
 <table class="listing" cellspacing="0" cellpadding="0">
-<tr class="listing-header"><th class="listing">name</th><th class="listing">size</th><th class="listing">rev</th><th class="listing">date</th></tr>
+<tr class="listing-header"><th class="listing">&nbsp;</th><th class="listing">name</th><th class="listing">size</th><th class="listing">rev</th><th class="listing">date</th></tr>
 %(dir_entries)s
 </table>
 
