--- a/templates/header.template
+++ b/templates/header.template
@@ -1,30 +1,33 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Xyche Software - svntrac - %(title)s</title>
+<title>Edgewall SVNTRAC - %(title)s</title>
 <link rel="stylesheet" type="text/css" href="%(htdocs_location)ssvntrac.css">
 </head>
 <body marginheight="0" marginwidth="0" rightmargin="0" leftmargin="0" 
 topmargin="0" bottommargin="0" link="#aa0000" alink="#cc0000" vlink="#880000">
     <div id="page-header">
-      <table bgcolor="#990000" id="page-topbar" border="0" 
+      <table bgcolor="#eeeeee" 
+	background="%(htdocs_location)stopbar_gradient.png" 
+	id="page-topbar" border="0" 
 	cellspacing="0" cellpadding="0" width="100%%">
 	  <tr>
 	    <td align="right" class="topbar">
-	      <a href="./press/" class="topbar-link">Press Center</a> |
-	      <a href="./company/" class="topbar-link">Company</a> |
-	      <a href="./contact/" class="topbar-link">Contact</a>
+	      <a href="http://www.edgewall.com/press/" class="topbar-link">Press Center</a> |
+	      <a href="http://www.edgewall.com/company/" class="topbar-link">Company</a> |
+	      <a href="http://www.edgewall.com/contact/" class="topbar-link">Contact</a>
 	    </td>
 	  </tr>
       </table>
       <table id="page-header" border="0" cellspacing="0" 
 	cellpadding="0" width="100%%">
 	  <tr>
-	    <td bgcolor="#880000" width="100%%" style="white-space:nowrap">
-	      <a href="http://svntrac.xyche.com/">
-		<img src="%(htdocs_location)stopheader-svntrac.png" 
-		  width="498" height="70" alt="svntrac" border="0" 
-		  hspace="0" vspace="0" /></a>
+	    <td bgcolor="white" width="100%%" style="white-space:nowrap">
+	      <a href="http://svntrac.edgewall.com/">
+		<img src="%(htdocs_location)ssvntrac_logo.png" 
+		  width="500" height="70" alt="svntrac" border="0" 
+		  hspace="0" vspace="0" />
+	      </a>
 	    </td>
 	  </tr>
       </table>
