--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [bdist_rpm]
+packager = Edgewall Software <info@edgewall.com>
 requires = python >= 2.1
            subversion-python >= 1.0.0
            pysqlite >= 0.4.3
