--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,8 +6,9 @@ include scripts/*.1
 include cgi-bin/trac.cgi
 include trac/tests/*.py
 include trac/tests/wiki-tests.txt
-recursive-include htdocs *.png *.gif *.js *README
+recursive-include htdocs *.png *.gif *.ico *.js *README
 recursive-include htdocs/css *.css
+recursive-include htdocs/js *.js
 recursive-include doc *trac_logo.* *README
 recursive-include wiki-default *
 recursive-include templates *.cs *README
