--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,9 @@ include AUTHORS ChangeLog COPYING INSTALL MANIFEST.in README README.tracd RELEAS
 include scripts/trac-admin
 include scripts/tracd
 include scripts/tracdb2env
+include scripts/trac-postinstall.py
 include scripts/*.1
+include scripts/rpm-install.sh
 include cgi-bin/trac.cgi
 include trac/tests/*.py
 include trac/tests/wiki-tests.txt
