--- a/anydiff-branch/MANIFEST.in
+++ b/anydiff-branch/MANIFEST.in
@@ -21,6 +21,7 @@ recursive-include htdocs/css *.css
 recursive-include htdocs/js *.js
 recursive-include doc *trac_logo.* *README
 recursive-include wiki-default *
+recursive-include wiki-macros *.py
 recursive-include templates *.cs *README
 recursive-include contrib *
 global-exclude *~
