--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,8 @@
-include AUTHORS ChangeLog COPYING INSTALL MANIFEST.in README README.tracd RELEASE setup.cfg THANKS UPGRADE
+include AUTHORS ChangeLog COPYING INSTALL MANIFEST.in README RELEASE setup.cfg THANKS UPGRADE
 include scripts/trac-admin
 include scripts/tracd
 include scripts/trac-postinstall.py
 include scripts/*.1
-include scripts/rpm-install.sh
 include cgi-bin/trac.cgi
 include cgi-bin/trac.fcgi
 include trac/tests/*.py
