--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,19 +6,18 @@ include scripts/*.1
 include cgi-bin/trac.cgi
 include cgi-bin/trac.fcgi
 include trac/tests/*.py
+include trac/admin/tests/*.py
+include trac/admin/tests/console-tests.txt
 include trac/db/tests/*.py
-include trac/web/tests/*.py
-include trac/util/tests/*.py
-include trac/wiki/tests/*.py
-include trac/wiki/tests/wiki-tests.txt
-include trac/ticket/tests/*.py
-include trac/scripts/tests/*.py
-include trac/scripts/tests/admin-tests.txt
 include trac/mimeview/tests/*.py
-include trac/web/tests/*.py
+include trac/ticket/tests/*.py
+include trac/util/tests/*.py
 include trac/versioncontrol/tests/*.py
 include trac/versioncontrol/web_ui/tests/*.py
 include trac/versioncontrol/tests/svnrepos.dump
+include trac/web/tests/*.py
+include trac/wiki/tests/*.py
+include trac/wiki/tests/wiki-tests.txt
 recursive-include htdocs *.png *.gif *.ico *.js *README
 recursive-include htdocs/css *.css
 recursive-include htdocs/js *.js
