--- a/contrib/workflow/basic-workflow.ini
+++ b/contrib/workflow/basic-workflow.ini
@@ -6,7 +6,7 @@ leave = * -> *
 leave.operations = leave_status
 leave.default = 1
 
-accept = new,assigned,reopened -> accepted
+accept = new,assigned,accepted,reopened -> accepted
 accept.permissions = TICKET_MODIFY
 accept.operations = set_owner_to_self
 
