--- a/trac/ticket/workflows/basic-workflow.ini
+++ b/trac/ticket/workflows/basic-workflow.ini
@@ -1,6 +1,15 @@
 [ticket-workflow]
 ; basic-workflow.ini
+;
 ; This workflow is intended to be a "fixed" version of the original workflow.
+;
+; If you adopt it for an existing Trac environment, don't forget to convert
+; the status of your existing tickets.
+;
+; Both the setup of the new [ticket-workflow] and the migration can be achieved
+; by using the following script:
+;
+; contrib/workflow/migrate_original_to_basic.py
 
 leave = * -> *
 leave.operations = leave_status
