--- a/trac/ticket/workflows/basic-workflow.ini
+++ b/trac/ticket/workflows/basic-workflow.ini
@@ -30,3 +30,16 @@ reassign.operations = set_owner
 reopen = closed -> reopened
 reopen.permissions = TICKET_CREATE
 reopen.operations = del_resolution
+
+[milestone-groups]
+closed = closed
+closed.order = 0
+closed.query_args = group=resolution
+closed.overall_completion = true
+
+active = *
+active.order = 1
+active.css_class = open
+
+new = new,reopened
+new.order = 2
