--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [egg_info]
-tag_build = dev
-tag_svn_revision = true
+tag_build = b2
+tag_svn_revision = false
 
 [bdist_wininst]
 bitmap = setup_wininst.bmp
